--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/default.css">
-<title>チャーハンつくる</title>
+<title>れんしゅう</title>
 </head>
-
 <body>
+  <h1>text-shadow</h1>
+  <ul id="text-shadow">
+  <li class="grow">Grow</li>
+  </ul>
+  
+  
+  
+  
+  
 </body>
 </html>
