--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <ul id="text-shadow">
   <li class="grow">Grow</li>
   </ul>
+  <h1>box-shadow</h1>
+  <ul id="box-shadow">
+    <li class="box-drop_shadow">Drop Shadow</li>
+  </ul>
   
   
   
