--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <ul id="box-shadow">
     <li class="box-drop_shadow">Drop Shadow</li>
   </ul>
-
+  
+  <h1>gradient</h1>
+<ul id="gradient">
+  <li crass="two-gradient">2 colors</li>
+  <li class="button">button</li>
+</ul>
   
   
   
