--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <h1>gradient</h1>
 <ul id="gradient">
-  <li crass="two-gradient">2 colors</li>
+  <li class="two-gradient">2 colors</li>
   <li class="button">button</li>
 </ul>
   
