--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <h1>transform</h1>
   <ul>
-    <li class="transform-rotate">rotate</li>
+    <li class="transform rotate">rotate</li>
   </ul>
   
   
